# agentic-ai

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REPO_SPEC.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
examples/: demo_basic.py  demo_custom_tool.py  demo_openai.py
notebooks/: 01_what_are_agents.ipynb
src/llm/: __init__.py  anthropic_client.py  base.py  factory.py  ollama_client.py  openai_client.py
src/loop/: __init__.py  agent.py  parser.py
src/prompts/: __init__.py  react.py
src/tools/: __init__.py  base.py  calculator.py  registry.py  weather.py  wikipedia.py
tests/: conftest.py  test_agent.py  test_parser.py  test_registry.py  test_tools.py
